<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Allseating</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="new_game">New Game</string>
</resources>
